--- a/html-odinLinksAndImages/index.html
+++ b/html-odinLinksAndImages/index.html
@@ -13,6 +13,10 @@
         <a href="./pages/about.html">About Page</a>       
 
         <img src="https://www.theodinproject.com/mstile-310x310.png"  alt="The Odin Project Logo">
+        
+        <p>Asta e un paragraph.</p>
+
+        <p>Asta e un <strong>paragraph bolduit</strong> cu un <a href="https://www.google.com">linkj</a>.</p>
 
     </body>
 </html>
